--- a/CS/HyperlinkInGridCell.Net5.csproj
+++ b/CS/HyperlinkInGridCell.Net5.csproj
@@ -16,7 +16,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-	  <PackageReference Include="DevExpress.Data" Version="21.1.6" />
+	  <PackageReference Include="DevExpress.Data" Version="21.1.*-*" />
 	  <PackageReference Include="DevExpress.Data.Desktop" Version="21.1.*-*" />
 	  <PackageReference Include="DevExpress.Mvvm" Version="21.1.*-*" />
 	  <PackageReference Include="DevExpress.Printing.Core" Version="21.1.*-*" />
